k8s/local/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: filedrop

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres


    spec:
      containers:
        - name: postgres
          image: postgres:18.4

          ports:
            - containerPort: 5432


          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: data

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - postgres
            initialDelaySeconds: 5

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi


      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-data


---
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: filedrop

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
