k8s/local/03-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: filedrop

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          ports:
            - containerPort: 6379

          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 3
            periodSeconds: 5


          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10


          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi


---

apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: filedrop

spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379
