k8s/local/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: filedrop
  namespace: filedrop

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "110m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"

spec:
  ingressClassName: nginx

  rules:
    - host: filedrop.test

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: filedrop-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix

            backend:
              service:
                name: filedrop-frontend
                port:
                  number: 80
